--- a/www/templates/queteCheck.html
+++ b/www/templates/queteCheck.html
@@ -18,7 +18,7 @@
         <div ng-if="team === equipeLogique">
             <ion-slide-box on-slide-changed="slideHasChanged($index)">
                 <ion-slide>
-                    <img src="../img/Enigme/1Nord.png" style="height: 75%;width: 80%;">
+                    <img src="../img/Enigme/1Nord.png" style="height: 200px;width: 80%;">
                 </ion-slide>
 
                 <ion-slide>
