--- a/platforms/android/assets/www/templates/queteCheck.html
+++ b/platforms/android/assets/www/templates/queteCheck.html
@@ -56,7 +56,7 @@
                 </form>
             </div>
 
-            <button class="button button-balanced QueteButtonPageCheck" ng-click="answer(user.answerLogique)">Valider
+            <button class="button button-balanced QueteButtonPageCheck" ng-click="answerLogique(user.answerLogique)">Valider
             </button>
         </div>
 
