--- a/platforms/android/assets/www/templates/tab-chats.html
+++ b/platforms/android/assets/www/templates/tab-chats.html
@@ -1,5 +1,5 @@
 <ion-view class="backgroundChat">
-  <ion-content padding="true">
+  <ion-content padding="true" overflow-scroll="false">
 
     <div>
         <div ng-repeat="message in messages" style="margin-top: 3%;"><!--ng-repeat="message in messages"-->
