--- a/www/templates/signInButton.html
+++ b/www/templates/signInButton.html
@@ -1,11 +1,17 @@
 <ion-view class="BackgroundSignInButton">
+
+    <ion-nav-buttons side="left">
+
+        <button class="button" style="border: 0; background: transparent" ui-sref="SignIn"><i class="icon button-icon icon-clear ion-arrow-left-a"></i>
+        </button>
+
+    </ion-nav-buttons>
+
     <ion-content class="padding" scroll="false">
 
 
         <div class="list inputStyle">
-            <form action="" >
-
-
+            <form action="">
                                 <label class="item item-input">
                                     <input ng-model="user.email" type="email" placeholder="Email">
                                 </label>
@@ -14,17 +20,10 @@
                                     <input ng-model="user.password" type="password" placeholder="Password">
                                 </label>
 
-
             </form>
         </div>
-
-
-            <div class="logButtonPage">
-                <button  class="button button-default" ng-click="login()" >Login</button>
+        <div class="logButtonPage">
+                <button  class="button button-default" ng-click="login()">Connexion</button>
             </div>
-
-
-
-
     </ion-content>
 </ion-view>
